@@ -5,3 +5,4 @@
 * BLOB replaced with LONGBLOB
 * process comments in JavaScript files
 * Belchertown support
+* support SVG image
